Package Metadata Update

--- a/tciOrg/manifest/package.xml
+++ b/tciOrg/manifest/package.xml
@@ -27,10 +27,14 @@
     <types>
         <members>*</members>
         <name>LightningComponentBundle</name>
-    </types>
+    </types> 
     <types>
         <members>*</members>
         <name>StaticResource</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>Flow</name>
     </types>
     <version>48.0</version>
 </Package>
